        - Chunk.add_block did NOT accept the non-prefixed block-names like "stone"
        - icon for half hunger was not rendered correctly
        - BlockItemFactory failed to load block-items when not rebuilding for new blocks since last rebuild. This occur
            only in first run due to missing _finish call of ItemFactory-instances
        - rotation of BlockModels was not working


changelog of snapshot 20w12a [released on 16.03.2020]
    - added class for LootTable, added sub-classes for generating the content
    - added base classes for loot table function and conditions
    - added loading phase for adding loot tables
    - added drops to blocks
    - added option to chest to load loot table into the inventory
    - added starter chest
    - added /loot command
    - added loader for OpenGL-only scripts (stored in .gl files, loader under rendering/OpenGLSetupFile.py)

    fixed bugs:
        - rendering of multi-part models with OR condition fails due to wrong condition check
        - rendering of some blocks failed
        - items in hotbar do not render in some cases
        - open inventory list of InventoryHandler gets reversed every ESC-press
        - shift crafting was duplicating output
        - custom block renderers were not working as expected
        - alpha blending has now disabled cull face in OpenGL to render also back-faces to user


changelog of snapshot 20w11a [released on 12.03.2020]
    - re-added support for custom block renderers
    - added support for OR-condition in block-states
    - block-states act when selecting from multiple models better
    - block models can now rotate themselves
    - tweaked generation system to look faster (and be faster)
    - world generation is now done parallel across up to 5 chunks [not thread-parallel]
    - improved block-showing performance by caching (rotated) vertices and texture data
      [this affects also world gen time]