@@ -146,3 +146,5 @@ issue 9: BlockItemGenerator fails to add block-items when not rebuilding for new
     ItemFactory._finish call which was assigned to an load event which has been called before blockitemfactory was
     finished; fixed on: 19.03.2020 by uuk
 issue 153: rotation of block models was crashing; fixed on: 19.03.2020 by uuk
+issue 155: multipart-models were crashing on load when using multiple model links in one entry;
+    fixed on: 20.03.2020 by uuk
